--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Victoria's Blog
-subtitle: "Project Managing Wizard; I #dance at weddings and make #silly faces at children. I #swim. I #read. I actually #laugh out loud. General #fuckery included."
+title: Risto's Blog
+subtitle: "Data scientist && Web developer - Python/R/PHP/React/Hugo/Hexo/D3.js"
 description: Description goes here..
-author: Victoria Williamson
+author: Risto Binovski
 language: en
 
 # URL
